# hostkit

./: .gitignore  HACKING.md  LICENSE  Makefile  README  README.md  meson.build
doc/: arch.markdown  arch.txt  arguments.markdown  capabilities.markdown  capabilities.txt  modules.markdown  modules.txt  output.markdown  output.txt  persist.markdown  persist.txt  service.markdown  todo.markdown
ide/HostKit/: HostKit.sln  HostKit.vcxproj
ide/HostKit/Common/: Common.vcxproj
ide/HostKit/Modules/: Modules.vcxproj
ide/HostKit/Writer/: Writer.vcxproj
include/: arguments.h  common.h  persist.h  service.h
include/modules/: common.h  modes.h  modules.h
include/writers/: writer.h  writer_json.h  writer_ruby.h  writer_xml.h  writers.h
src/: CMakeLists.txt  Makefile  arguments.c  arguments.h  common.h  common.mk  hostkit.rc  main.c  persist.c  persist.h  service.c  util.c  util.h
src/common/: common.c  common.h
src/modules/: Makefile  common.c  common.h  modules.c  modules.h
src/modules/basic/: basic.h  disk_details.c  drives.c  host.c  host_details.c
src/modules/full/: full.h
src/modules/standard/: enum_path.c  enum_windir.c  standard.h
src/writer/: Makefile  main.c  writer.c  writer.h  writer_json.c  writer_json.h  writer_ruby.c  writer_ruby.h  writer_xml.c  writer_xml.h  writers.c  writers.h
src/writers/: main.c  writer.c  writer_json.c  writer_ruby.c  writer_xml.c
